Add hook and update dependencies

--- a/packages/react-native-flipper-apollo-devtools/tsconfig.json
+++ b/packages/react-native-flipper-apollo-devtools/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["src", "types"],
   "compilerOptions": {
+    "outDir": "dist",
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
