--- a/packages/flipper-plugin-apollo-client-devtools/package.json
+++ b/packages/flipper-plugin-apollo-client-devtools/package.json
@@ -15,7 +15,8 @@
     "lint": "flipper-pkg lint",
     "prepack": "flipper-pkg lint && flipper-pkg bundle",
     "build": "flipper-pkg bundle",
-    "watch": "flipper-pkg bundle --watch"
+    "watch": "flipper-pkg bundle --watch",
+    "prepublishOnly": "npm build"
   },
   "peerDependencies": {
     "flipper": "latest"
