--- a/packages/react-native-flipper-apollo-devtools/package.json
+++ b/packages/react-native-flipper-apollo-devtools/package.json
@@ -15,17 +15,18 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "prepublishOnly": "npm build"
   },
   "peerDependencies": {
-    "react-native-flipper": "^0.37.0"
+    "react-native-flipper": "^0.61.0"
   },
   "devDependencies": {
-    "husky": "^4.2.5",
-    "react-native-flipper": "^0.37.0",
-    "tsdx": "^0.13.2",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "husky": "^4.3.0",
+    "react-native-flipper": "^0.61.0",
+    "tsdx": "^0.14.0",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
@@ -39,6 +40,6 @@
     "trailingComma": "es5"
   },
   "dependencies": {
-    "@apollo/client": "^3.1.3"
+    "@apollo/client": "^3.2.3"
   }
 }
